# Sibyl

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  llm-eval.yml
alembic/: env.py
docs/: OPERATIONS_STRATEGY.md
docs/00-process/: README.md
docs/01-problem-discovery/: README.md
docs/02-product-discovery/: README.md
docs/03-architecture/: README.md
docs/04-database/: README.md
docs/05-api-design/: README.md  openapi.yaml
docs/06-sequence-diagrams/: README.md
docs/07-infrastructure/: README.md
docs/08-testing-strategy/: README.md
docs/09-implementation/: README.md
docs/10-optimization/: README.md
eval/: README.md  models.py  run_golden_set.py  scoring.py
eval/golden_sets/: pr_analysis.jsonl  root_cause_analysis.jsonl
infra/postgres/: init-schemas.sql
infra/prometheus/: prometheus.yml
src/sibyl/: worker.py
tests/: conftest.py
tests/contract/: test_github_app_auth.py  test_github_checks_client.py
tests/integration/: test_checks_notifier.py  test_ci_cd_optimization_repository.py  test_ci_cd_optimization_service.py  test_coverage_gaps_api.py  test_coverage_ingest_api.py  test_coverage_intelligence_repository.py  test_coverage_intelligence_service.py  test_dedup.py  test_dependency_analysis_api.py  test_dependency_analysis_repository.py  test_dependency_analysis_service.py  test_dependency_ingest_api.py  test_engineering_metrics_api.py  test_engineering_metrics_repository.py  test_engineering_metrics_service.py  test_flaky_detection_repository.py  test_flaky_detection_service.py  test_installation_repository.py  test_outbox_repository.py  test_pr_analysis_api.py  test_pr_analysis_repository.py  test_pr_analysis_service.py  test_regression_prediction_api.py  test_regression_prediction_checks_notifier.py  test_regression_prediction_repository.py  (+16 more)
(+148 files in other folders)
